# algolia-monitor

./: Cargo.toml  README.md
.github/workflows/: publish.yml  release-plz.yml
src/: main.rs
